--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .{js,jsx}",
+    "lint": "eslint '**/*.{js,jsx}'",
     "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "eslintConfig": {
