--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .{js,jsx}",
-    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+    "lint": "eslint '**/*.{js,jsx}'",
+    "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
