--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .js"
+    "lint": "eslint .  --ext .js",
+    "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
