--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "react-scroll": "^1.8.0",
     "react-slick": "^0.27.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .js",
+    "lint": "eslint '**/*.{js,jsx}'",
     "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "eslintConfig": {
