--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .js",
+    "lint": "eslint '**/*.{js,jsx}'",
     "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "eslintConfig": {
