--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
+    "babel-jest": "^26.1.0",
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
-    "prettier": "2.0.5"
+    "jest": "^26.1.0",
+    "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1"
   }
 }
