--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "firebase": "^7.17.1",
     "i18next": "^19.6.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
