--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint '**/*.{js,jsx}'",
-    "fix": "prettier --write '**/*.{js,jsx,css,scss}'"
+    "fix": "prettier --write 'src/**/*.js*' 'src/**/*.css' '!src/**/*/*.snap'"
   },
   "eslintConfig": {
     "extends": "react-app"
