--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "firebase": "^7.17.1",
     "i18next": "^19.6.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -28,7 +29,8 @@
     "react-scroll": "^1.8.0",
     "react-slick": "^0.27.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
