--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
     "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
+    "react-router": "3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
