--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint-plugin-import": "^2.22.0",
     "firebase": "^7.17.1",
     "i18next": "^19.6.3",
+    "i18next-browser-languagedetector": "^5.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
